--- a/index.html
+++ b/index.html
@@ -381,16 +381,15 @@
             }
         }
     </style>
-  <!-- 
-  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
-<!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script> -->
-   
+  
+      <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
+<!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script>
 
-<script type="application">
+<script type="application/ld+json">
     {
   "@context": "https://schema.org",
   "@type": "WebApplication",
-  "name": "Keyword Extractor Tool",
+  "name": "Keywords from urls Extractor from sitemap Tool",
   "url": "https://keywordsfromurls.com/",
   "description": "Extract relevant keywords from URLs or text with our Keyword Extractor tool. Get keywords instantly and use them for your SEO or content creation needs.",
   "mainEntityOfPage": "https://keywordsfromurls.com/",
@@ -457,9 +456,9 @@
   ]
 }
 </script>
-<!-- 
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2996839415438815"
-     crossorigin="anonymous"></script>-->
+     crossorigin="anonymous"></script>
     
 
 
@@ -483,14 +482,10 @@
       <a href="title-url-generator.html">Title URL Generator</a>
       <a href="url-encoder-decoder.html">URL Encoder/Decoder</a>
       <a href="url-parser-tool.html">URL Parser</a>                           
-      <a href="blog.html">Blog</a>
     </div>
   </div>
 </div>
-
-
-
-            </nav>
+ </nav>
     </header>
 
     <!-- Main Content -->
