sitemap-url-extractor-tool.html

--- a/sitemap-url-extractor-tool.html
+++ b/sitemap-url-extractor-tool.html
@@ -381,12 +381,12 @@
             }
         }
     </style>
-  <!-- 
+  
   <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
 <!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script> -->
-    <!-- 
+  
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2996839415438815"
-     crossorigin="anonymous"></script>-->
+     crossorigin="anonymous"></script>
   <script type="application">
     {
   "@context": "https://schema.org",
@@ -516,20 +516,17 @@
             <a href="chrome-extension-for-keyword-extraction-from-urls.html">Chrome Extention</a>
               <a href="about-us.html" target="_blank">About Us</a>
             <a href="contact-us.html" target="_blank">Contact Us</a>
-                    <div class="dropdown-menu-container">
-                          <div class="dropdown">
+                    <div class="dropdown">
     <button class="dropdown-btn" onclick="toggleDropdown(event)">Tools and Blog</button>
-    <div class="dropdown-content">
-      <a href="Sitemap-url-extractor.html">Sitemap Url Extractor</a>
-         <a href="Keywords-url-Generator.html">Keywords Url Generator</a>
-         <a href="">URl Encoder/Decoder</a>
-        <a href=""> Url Parser</a>                           
-      <a href="">Blog</a>
+    <div class="dropdown-content" style="display: none;">
+      <a href="sitemap-url-extractor-tool.html">Sitemap URL Extractor</a>
+      <a href="title-url-generator.html">Title URL Generator</a>
+      <a href="url-encoder-decoder.html">URL Encoder/Decoder</a>
+      <a href="url-parser-tool.html">URL Parser</a>                           
     </div>
   </div>
-
-
-            </nav>
+</div>
+  </nav>
     </header>
     <!-- Main Content -->
     <main class="main">
@@ -663,6 +660,7 @@
             }
         }
     </script>
+        
 <h2>Extract Keywords from URLs to Organize Your Website Data</h2>
         <p>When organizing your website data and analyzing the topics covered in your blog, it can be useful to extract keywords from your URLs. Our tool helps you do just that. Heres how it works:</p>
         <ul>
