url-encoder-decoder.html

--- a/url-encoder-decoder.html
+++ b/url-encoder-decoder.html
@@ -451,7 +451,7 @@
         }
 
     </style>
-   <script> 
+  <script type="application/ld+json">
        {
   "@context": "https://schema.org",
   "@type": "WebPage",
@@ -479,12 +479,12 @@
   "keywords": "Title generator, URL generator, SEO tool, slugs, keyword optimization"
 }
 </script>
-  <!-- 
+  
   <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
-<!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script> -->
-    <!-- 
+<!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script>
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2996839415438815"
-     crossorigin="anonymous"></script>-->
+     crossorigin="anonymous"></script>
   </head>
       <!-- Header -->
     <header class="header">
@@ -494,17 +494,16 @@
             <a href="chrome-extension-for-keyword-extraction-from-urls.html">Chrome Extention</a>
               <a href="about-us.html" target="_blank">About Us</a>
             <a href="contact-us.html" target="_blank">Contact Us</a>
-                    <div class="dropdown-menu-container">
-                          <div class="dropdown">
+                   <div class="dropdown">
     <button class="dropdown-btn" onclick="toggleDropdown(event)">Tools and Blog</button>
-    <div class="dropdown-content">
-      <a href="Sitemap-url-extractor.html">Sitemap Url Extractor</a>
-         <a href="Keywords-url-Generator.html">Keywords Url Generator</a>
-         <a href="">URl Encoder/Decoder</a>
-        <a href=""> Url Parser</a>                           
-      <a href="">Blog</a>
+    <div class="dropdown-content" style="display: none;">
+      <a href="sitemap-url-extractor-tool.html">Sitemap URL Extractor</a>
+      <a href="title-url-generator.html">Title URL Generator</a>
+      <a href="url-encoder-decoder.html">URL Encoder/Decoder</a>
+      <a href="url-parser-tool.html">URL Parser</a>                           
     </div>
   </div>
+</div>
 
 
             </nav>
