--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
             <a href="contact-us.html" target="_blank">Contact Us</a>
                    <div class="dropdown-menu-container">
   <div class="dropdown">
-    <button class="dropdown-btn" onclick="toggleDropdown(event)">Tools and Blog</button>
+    <button class="dropdown-btn" onclick="toggleDropdown(event)">Url Tools</button>
     <div class="dropdown-content" style="display: none;">
       <a href="sitemap-url-extractor-tool.html">Sitemap URL Extractor</a>
       <a href="title-url-generator.html">Title URL Generator</a>
