sitemap-url-extractor-tool.html

--- a/sitemap-url-extractor-tool.html
+++ b/sitemap-url-extractor-tool.html
@@ -383,11 +383,11 @@
     </style>
   
   <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
-<!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script> -->
+<!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script>
   
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2996839415438815"
      crossorigin="anonymous"></script>
-  <script type="application">
+   <script type="application/ld+json">
     {
   "@context": "https://schema.org",
   "@type": "WebApplication",
@@ -517,7 +517,7 @@
               <a href="about-us.html" target="_blank">About Us</a>
             <a href="contact-us.html" target="_blank">Contact Us</a>
                     <div class="dropdown">
-    <button class="dropdown-btn" onclick="toggleDropdown(event)">Tools and Blog</button>
+    <button class="dropdown-btn" onclick="toggleDropdown(event)">Url Tools</button>
     <div class="dropdown-content" style="display: none;">
       <a href="sitemap-url-extractor-tool.html">Sitemap URL Extractor</a>
       <a href="title-url-generator.html">Title URL Generator</a>
