--- a/url-parser-tool.html
+++ b/url-parser-tool.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extract Bulk keywords from Bulk URLs [sitemap] in one click Explore a variety of tools designed to simplify blogging tasks and save time for bloggers.">
+    <meta name="description" content="Easily parse URLs to extract domains, paths, query parameters, and more. Perfect for SEO analysis and optimizing website links.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://keywordsfromurls.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -531,7 +531,7 @@
               <a href="about-us.html" target="_blank">About Us</a>
             <a href="contact-us.html" target="_blank">Contact Us</a>
                    <div class="dropdown">
-    <button class="dropdown-btn" onclick="toggleDropdown(event)">Tools and Blog</button>
+    <button class="dropdown-btn" onclick="toggleDropdown(event)">Url Tools</button>
     <div class="dropdown-content" style="display: none;">
       <a href="sitemap-url-extractor-tool.html">Sitemap URL Extractor</a>
       <a href="title-url-generator.html">Title URL Generator</a>
