--- a/sitemap-url-extractor-tool.html
+++ b/sitemap-url-extractor-tool.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extract Bulk keywords from Bulk URLs [sitemap] in one click Explore a variety of tools designed to simplify blogging tasks and save time for bloggers.">
+    <meta name="description" content="Quickly extract all URLs from sitemaps with our Sitemap URL Extractor. Just paste the sitemap and get URLs & keywords with one click for SEO analysis">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://keywordsfromurls.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -400,14 +400,7 @@
     "name": "Extract Keywords",
     "target": "https://keywordsfromurls.com/",
     "actionStatus": "ActiveActionStatus"
-  },
-  "image": "",
-  "publisher": {
-    "@type": "Organization",
-    "name": "Keywords from urls",
-    "url": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgvj6q0lJAdr2BReKKhoqXpTMX-4jSAq3bqfsU4HvSbi4TIIZpr_3iUdJkagOSjcTpdxtBAXq1WUXEdM22oR_hqtD3RD1e5zG6d1c7T12luHodLKTUN3EErB5MsO7FfNUDtdkCsJPXlOG-AURPtdrUtY8vVa8XgKwFzOQfna-6Wz8Z72Ob0_1TWu9RSEKlI/s1080/Keywords%20From%20Urls.png"
   }
-}
 
 </script>
     <script type="application/ld+json">
