--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Group multiple keywords effortlessly with our Keywords Grouping Tool. Get common and unique keywords separately for better SEO optimization.">
+
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/boottrap.bundle.min.js"></script>
    <title>Keyword Grouping Tool | Organize & Optimize Keywords</title>
