--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Generate clean, SEO-friendly slugs with our Slug Generator Tool. Perfect for creating optimized URLs for blogs, articles, and websites.">
+
    <link rel="canonical" href="https://keywordsfromurls.com/Slug-Generator.html">
 
     <title>Free Online Slug Generator - Create SEO-Friendly URLs Effortlessly</title>
