--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Analyze your content with our Word Count and Keyword Density Tool. Count words and calculate keyword percentages for SEO optimization in one click.">
+
 <link rel="canonical" href="https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html">
 
     <title>Keyword Density Tool</title>
