privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -123,10 +123,7 @@
                 font-size: 14px;
             }
 
-            button {
-                font-size: 12px;
-                padding: 5px 10px;
-            }
+        
 
             .header nav {
                 flex-wrap: wrap;
@@ -410,5 +407,6 @@ document.addEventListener('click', (e) => {
     });
   }
 });
+         </script>
 </body>
 </html>
