sitemap-url-extractor-tool.html

--- a/sitemap-url-extractor-tool.html
+++ b/sitemap-url-extractor-tool.html
@@ -705,7 +705,7 @@ document.addEventListener('click', (e) => {
     <p>When you enter a URL, the tool extracts the primary keyword from it. For example, from <a href="https://www.keywordsfromurls.com/">https://www.keywordsfromurls.com/</a>, the extracted keyword would be <strong>www.keywordsfromurls.com</strong>.</p>
 
     <h2>What kind of URLs can I use with the tool?</h2>
-    <p>You can use any URL, including personal blogs, websites, and e-commerce links. For example, <a href="https://xyz.blogspot.com/01/01/one-more-second-logic.html">https://xyz.blogspot.com/01/01/one-more-second-logic.html</a> will extract <strong>one more second logic</strong>.</p>
+    <p>You can use any URL, including personal blogs, websites, and e-commerce links. For example, https://xyz.blogspot.com/01/01/one-more-second-logic.html will extract <strong>one more second logic</strong>.</p>
 
     <h2>Does the tool work with subdomains?</h2>
     <p>Yes, the tool works with subdomains. It will identify and extract keywords from both the main domain and subdomain URLs effectively.</p>
